# engram

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  hooks.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: ensure_running.sh  hooks.json  run-hook.cmd  run-server  session-start  session_start.sh  stop  stop.sh
src/: __init__.py  ensure_running.py  extractor.py  hook_session_start.py  hook_stop.py  server.py
src/engram/: db.py  server.py
tests/: test_db.py  test_extractor.py  test_server.py
