[project]
name = "engram"
version = "0.1.0"
description = "Cross-session knowledge persistence for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
    "anthropic>=0.40.0",
]

[project.scripts]
engram = "engram.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
