[project]
name = "engram"
version = "0.1.0"
description = "Cross-session knowledge persistence for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
engram_mcp_server = "engram.server:main"
engram_session_start = "engram.hook_session_start:main"
engram_stop = "engram.hook_stop:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
engram = "src"
